<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/year_progress_layout">

    <data>
        <variable name="year" type="int" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin"
        android:layout_marginStart="@dimen/content_margin"
        android:layout_marginEnd="@dimen/content_margin"
        app:cardBackgroundColor="@color/color_primary_dark"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/content_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{String.valueOf(year)}"
                android:theme="@style/Text.Header"
                tools:text="2019"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_content_margin"
                android:layout_marginBottom="@dimen/half_content_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/statistic_year_progress_month_january"
                    android:theme="@style/Text.Small"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/statistic_year_progress_month_february"
                    android:theme="@style/Text.Small"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/statistic_year_progress_month_march"
                    android:theme="@style/Text.Small"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/statistic_year_progress_month_april"
                    android:theme="@style/Text.Small"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/statistic_year_progress_month_may"
                    android:theme="@style/Text.Small"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/statistic_year_progress_month_june"
                    android:theme="@style/Text.Small"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/statistic_year_progress_month_july"
                    android:theme="@style/Text.Small"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/statistic_year_progress_month_august"
                    android:theme="@style/Text.Small"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/statistic_year_progress_month_september"
                    android:theme="@style/Text.Small"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/statistic_year_progress_month_october"
                    android:theme="@style/Text.Small"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/statistic_year_progress_month_november"
                    android:theme="@style/Text.Small"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/statistic_year_progress_month_december"
                    android:theme="@style/Text.Small"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/days_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>