<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="statistics" type="com.sengami.domain_base.model.Statistics" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_margin"
        app:cardBackgroundColor="@color/color_primary_dark"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/statistic_other_statistics"
                android:theme="@style/Text.Header"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/content_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:theme="@style/Text.Standard"
                    android:text="@string/statistic_other_statistics_total_entries"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/Text.Standard"
                    android:text="@{String.valueOf(statistics.totalEntries)}"
                    tools:text="777"/>
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/half_content_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:theme="@style/Text.Standard"
                    android:text="@string/statistic_other_statistics_year_with_most_entries"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/Text.Standard"
                    android:text="@{String.valueOf(statistics.yearWithMostEntries)}"
                    tools:text="777"/>
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/half_content_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:theme="@style/Text.Standard"
                    android:text="@string/statistic_other_statistics_longest_entry_character_count"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/Text.Standard"
                    android:text="@{String.valueOf(statistics.longestEntryCharacterCount)}"
                    tools:text="777"/>
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/half_content_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:theme="@style/Text.Standard"
                    android:text="@string/statistic_other_statistics_average_entries_per_day"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/Text.Standard"
                    android:text="@{String.valueOf(statistics.averageEntriesPerDay)}"
                    tools:text="777"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>